--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
 <body>
     <div class="container">
         <div class="banner"><h1>Muusika kordamine</h1></div>
-        <div class="video"><iframe id="yt_video" width="800" height="400" src=""></iframe></div>
+        <div class="wrapper">
+            <div class="frame-container">
+                <iframe width="420" height="345" id="yt_video" src=""></iframe>
+            </div>
+        </div>
         <div class="buttons">
             <button type="button" id="next_button" onclick="newSong()">Uus video</button>
             <button type="button" id="answer_button" onclick="showAnswer()">Näita vastus</button>
@@ -67,7 +71,26 @@
     width:800px;
     margin:0 auto;
 }
+.frame-container {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */  
+    padding-top: 25px;
+    width: 300%; /* enlarge beyond browser width */
+    left: -100%; /* center */
+}
 
+.frame-container iframe {
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%;
+}
+
+.wrapper {
+   overflow: hidden;
+   max-width: 100%;
+}
 .buttons{
     padding-left: 325px;
 }
