--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Muusika kordamine</title>
     <script>
         // returns random elem from array
         function randomChoice(arr) {
@@ -93,12 +93,13 @@
    max-width: 100%;
 }
 .buttons{
+    padding-top: 10px;
     padding-left: 325px;
 }
 .answer_box{
     padding-left:242px;
 }
 .banner{
-    padding-left:242px;
+    padding-left:270px;
 }
 </style>
