--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             </div>
         </div>
         <div class="buttons">
-            <button type="button" id="next_button" onclick="newSong()">Uus video</button>
-            <button type="button" id="answer_button" onclick="showAnswer()">Näita vastust</button>
+            <button class="button_" type="button" id="next_button" onclick="newSong()">Uus video</button>
+            <button class="button_" type="button" id="answer_button" onclick="showAnswer()">Näita vastust</button>
         </div>
         <div class="answer_box"><h1 id="answer"></h1></div>
     </div>
@@ -69,10 +69,11 @@
 </html>
 
 <style>
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap');
 
 body{
-    background-color: antiquewhite;
+    background-color: rgb(255, 255, 255);
+    font-family: 'Poppins', sans-serif;
 }
 .container{
     width:800px;
@@ -102,10 +103,38 @@ body{
     padding-top: 10px;
     padding-left: 325px;
 }
-.answer_box{
-    padding-left:242px;
-}
+
 .banner{
     padding-left:270px;
 }
+
+.button_ {
+  background-color: rgba(51, 51, 51, 0.05);
+  border-radius: 8px;
+  border-width: 0;
+  color: #333333;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  padding: 10px 12px;
+  text-align: center;
+  transition: all 200ms;
+  vertical-align: baseline;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  
+}
+
+.answer_box{
+    width:800px;
+    word-wrap: break-word
+}
+
 </style>
