--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             if (unusedSongs.length > 0) {
             document.getElementById("answer").innerHTML = ''  // clears answers header
             var key = randomChoice(unusedSongs);  // takes random song key from list
+            console.log(key)
             removeElem(unusedSongs, key)  // removes key from unusedSongs
             usedSongs.push(key) // pushes the key to usedsongs list
             // Fills array with information ->
@@ -52,14 +53,14 @@
         
         function selectClassP(){
             data = prima_data
-            usedSongs = []
-            unusedSongs = 
+            unusedSongs = Object.keys(data);
             newSong()
 
         };
 
         function selectClassT(){
             data = tertia_data
+            unusedSongs = Object.keys(data);
             newSong()
 
         };
